# compression-benchmark

./: .gitignore  CMakeLists.txt  README.md  configure_debug.sh  configure_release.sh  generate_method_names.sh
include/: benchmark.hpp  byte_stream_split_internal.hpp  encoding.hpp  gorilla.hpp  method.hpp  util.hpp
notebook/: cmethods.py  methods.py  notebook.ipynb
src/: benchmark.cpp  benchmark.hpp  bsc_wrapper.cpp  bsc_wrapper.hpp  compression-benchmark.cpp  encoding.hpp  encoding_bsc.cpp  encoding_gorilla.cpp  encoding_lz4.cpp  encoding_pcodec.cpp  encoding_snappy.cpp  encoding_streamsplit.cpp  encoding_zstd.cpp  interface.cpp  main.cpp  method.hpp  method_bsc.cpp  method_intfloat.cpp  method_lfzip.cpp  method_lossless.cpp  method_machete.cpp  method_mask.cpp  method_quantise.cpp  method_sz3.cpp  method_zfp.cpp  method_zstd.cpp  util.cpp  util.hpp  wrapper.hpp  wrapper_bsc.cpp  wrapper_lz4.cpp  wrapper_streamsplit.cpp  wrapper_zstd.cpp
